--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,15 @@
 {
-  "name": "alloy",
-  "private": true,
-  "dependencies": {
-    "jquery": "~1.11.0",
-    "selectivizr": "latest"
-  },
-  "devDependencies": {}
+  	"name": "alloy",
+  	"version": "0.0.0",
+  	"repository": {
+	    "type": "git",
+	    "url": "git://github.com/gfinbow/alloy.git"
+	},	
+  	"private": true,
+  	"directory": "alloy",
+  	"dependencies": {
+	    "jquery": "~1.11.0",
+	    "selectivizr": "latest"
+  	},
+  	"devDependencies": {}
 }
