--- a/content/_data/app.json
+++ b/content/_data/app.json
@@ -1,8 +1,8 @@
 {
-	"title": "Element78 Visual Language",
-	"siteclass": "e78-visual-language",
+	"title": "ALLOY Visual Language",
+	"siteclass": "alloy-visual-language",
 	"analytics": "UA-XXXXX-X",
-	"author": "Element 78 Solution Limited",
+	"author": "ALLOY Team",
 	"description": "This is the default description from the app.json file",
 	"keywords": "sample, keywords, from, the, app.json, file"
 }
