removed some staddle references

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "https://github.com/gfinbow/alloy.git"
   },
-  "staddle": {
+  "alloy": {
     "dev": true,
     "content": "content",
     "layouts": "_layouts",
