--- a/content/_data/app.json
+++ b/content/_data/app.json
@@ -1,4 +1,5 @@
 {
+    "name": "ALLOY WebSite Name in app.json",
 	"title": "ALLOY Visual Language",
 	"siteclass": "alloy-visual-language",
     "url": "https://XXXXXXXXXXXXX/",
@@ -10,8 +11,7 @@
     "organization": [
     {
         "content": {
-            "name": "ALLOY Default Name in app.json",
-            "image": "https://XXXXXXXXXXXXX/"
+            "image": "https://XXXXXXXXXXXXX/image.png"
         },
         "social": [
         {
