--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alloy",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/gfinbow/alloy.git"
@@ -20,12 +20,12 @@
     "port": 8008
   },
   "devDependencies": {
-    "assemble": "*",
+    "assemble": "^0.4.42",
     "grunt": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-connect": "*",
     "grunt-contrib-copy": "*",
-    "grunt-contrib-imagemin": "^0.9.3",
+    "grunt-contrib-imagemin": "*",
     "grunt-contrib-jshint": "*",
     "grunt-contrib-less": "*",
     "grunt-contrib-requirejs": "*",
